--- a/src/app/user-list/user-list.component.html
+++ b/src/app/user-list/user-list.component.html
@@ -17,8 +17,8 @@
           <td>{{user.address}}</td>
           <td>{{user.phone}}</td>
           <td>{{user.email}}</td>
-          <button class="btn" >Edit</button>
-          <button class="btn" >Delete</button>
+          <button class="btn"(click)="openCustomPopup(user.id)" >Edit</button>
+          <button class="btn" (click)="deleteUser(user.id)">Delete</button>
         </tr>
       </table>
     </div>
